# shellui

./: .gitignore  CORE.md  Cargo.toml  IMPLEMENTATION_NOTES.md  PLATFORM.md  README.md  go.mod  go.sum
assets/fonts/: README.md
core/app/: app.go
core/canvas/: canvas.go
core/font/: font.go  opentype.go  roboto.go
core/font/opentype/: opentype.go
core/layout/: layout.go
core/reconcile/: reconcile.go
core/scale/: scale.go
core/scene/: functions.go  scene.go
core/state/: state.go
core/view/: container.go  functions.go  measure.go  view.go
examples/: advanced_counter.rs  advanced_window.rs  center_positioning.rs  clean_api.rs  content_positioning.rs  content_sizing.rs  counter.rs  debug_tight.rs  fill_window.rs  new_api.rs  no_padding_test.rs  positioning.rs  swiftui_style.rs  test_padding.rs  working_padding.rs
examples/basic/: main.go
examples/counter/: main.go
platform/: platform.go
platform/glfw/: platform.go
render/: gl_painter.go  painter.go  renderer.go  shaders.go  text_render.go
src/: app.rs  layout.rs  lib.rs  main.rs  render.rs  view.rs  window.rs
src/core/: background.rs  border.rs  element.rs  event.rs  layout.rs  length.rs  mod.rs  mouse.rs  overlay.rs  point.rs  renderer.rs  shadow.rs  shell.rs  transformation.rs  tree.rs  vector.rs  widget.rs  window.rs
src/runtime/: mod.rs  user_interface.rs
src/view/: adapter.rs
src/widget/: hstack.rs  mod.rs  text.rs  vstack.rs
widget/button/: button.go
widget/text/: text.go
