[package]
name = "shellui"
version = "0.1.0"
edition = "2021"

[[example]]
name = "advanced_window"
path = "examples/advanced_window.rs"

[[example]]
name = "content_sizing"
path = "examples/content_sizing.rs"

[[example]]
name = "fill_window"
path = "examples/fill_window.rs"

[dependencies]
winit = "0.30"
softbuffer = "0.4"
raw-window-handle = "0.6"
tiny-skia = "0.11.4"
cosmic-text = "0.16"
swash = "0.2"
